<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="Settings"></item>

    <item android:id="@+id/search"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="Add Lecture"
        ></item>


    <item android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="Home"
        ></item>

    <item android:id="@+id/selected"
        android:icon="@drawable/ic_view_headline_black_24dp"
        android:title="Selected"
        ></item>



    <item android:id="@+id/profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="Profile"
        ></item>
</menu>